# lightgbm-rs

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
lightgbm2/: .gitignore  Cargo.toml
lightgbm2-sys/: Cargo.toml
lightgbm2-sys/lightgbm/include/LightGBM/: c_api.h
lightgbm2/examples/binary_classification/: Cargo.toml
lightgbm2/examples/multiclass_classification/: Cargo.toml
lightgbm2/examples/regression/: Cargo.toml
lightgbm2/examples/regression/src/: main.rs
lightgbm2/src/: booster.rs  dataset.rs  error.rs  lib.rs
