[package]
name = "lightgbm2"
version = "0.3.0"
authors = ["andreclaudino <claudino@d2x.com.br>", "vaaaaanquish <6syun9@gmail.com>"]
license = "MIT"
repository = "https://github.com/vaaaaanquish/LightGBM"
description = "Machine learning using LightGBM"
readme = "README.md"
exclude = [".gitignore", ".gitmodules", "examples", "lightgbm-sys"]

[dependencies]
lightgbm2-sys = { path = "../lightgbm2-sys", version = "0.3.0" }
libc = "0.2.81"
derive_builder = "0.12"
serde_json = "1.0.59"
polars = {version = "0.26", optional = true}

[features]
default = []
dataframe = ["polars"]
